--- a/src/common/style.css
+++ b/src/common/style.css
@@ -1,100 +1,102 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    width: 100%;
-    height: 100%;
-    min-width: 1000px;
-    min-height: 500px;
-    position: relative;
-    font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
-    border: 0 none;
-	background-size: cover;				
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-	background-position: center;
-    background-image:url(../assets/006Xmmmgly1g60i9sv2dej31hc0u0hdt.jpg);
+body {
+  width: 100%;
+  height: 100%;
+  min-width: 1000px;
+  min-height: 500px;
+  position: relative;
+  font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei',
+    'Hiragino Sans GB', 'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
+  border: 0 none;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-image: url(../assets/006Xmmmgly1g60i9sv2dej31hc0u0hdt.jpg);
 }
-#search{
-    width:610px;
-    height: 53px;
-    font-size: 16px;
-    padding-top: 1px;
-    padding-right: 60px;
-}#app{
-    width: 1000px;
-    height: 388px;
-    margin-left:-500px;
-    margin-top:auto;
-    position: absolute;
-    left:50%;
-    top:50%;
+#search {
+  width: 610px;
+  height: 53px;
+  font-size: 16px;
+  padding-top: 1px;
+  padding-right: 60px;
 }
-#searchCheck{
-    float: left;
-    border-radius: 4px;
-    position: relative;
-    display: block;
-    background:white;
-    box-shadow:0 4px 10px rgba(0,0,0,.1);
+#app {
+  width: 1000px;
+  height: 388px;
+  margin-left: -500px;
+  margin-top: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
 }
-#searchBox{
-    width:720px;
-    height:54px;
-    margin:0 auto 0px auto;
-    color: #333333;
-    box-shadow:0 4px 10px rgba(0,0,0,.1);
-    filter: alpha(opacity=80);
-    -moz-opacity: 0.8;
-    -khtml-opacity: 0.8;
-    opacity: 0.8;
-    position: relative;
+#searchCheck {
+  float: left;
+  border-radius: 4px;
+  position: relative;
+  display: block;
+  background: white;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-.siteBox{
-    text-align:center;
-    position: relative;
-    margin-top:150px;
+#searchBox {
+  width: 720px;
+  height: 54px;
+  margin: 0 auto 0px auto;
+  color: #333333;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;
+  position: relative;
 }
-.siteBtn{
-    width: 104px;
-    height: 114px;
-    padding-top: 7px;
-    box-sizing: border-box;
-    display: inline-block;
-    zoom:1;
-    overflow: hidden;
-    text-decoration: none;
-    filter: alpha(opacity=80);
-    -moz-opacity: 0.8;
-    -khtml-opacity: 0.8;
-    opacity: 0.8;
-    text-align: center;
-    margin-top: 20px;
+.siteBox {
+  text-align: center;
+  position: relative;
+  margin-top: 150px;
 }
-.siteSpan{
-                    font-size:16px;
-					color:white;
-					text-shadow:1px 1px 3px black;
-					display: inline-block;
-					max-width: 100px;
-					overflow: hidden;
-					white-space: nowrap;
-					text-overflow: ellipsis;
-                    margin-top:0px;
+.siteBtn {
+  width: 104px;
+  height: 114px;
+  padding-top: 7px;
+  box-sizing: border-box;
+  display: inline-block;
+  zoom: 1;
+  overflow: hidden;
+  text-decoration: none;
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;
+  text-align: center;
+  margin-top: 20px;
 }
-.uSiteDelete{
-    /* display: none; */
-    position: absolute;
-    margin-left: 30px;
-    font-size: 15px;
-    width: 20px;
-    height: 20px;
-    padding-top: 2px;
-    padding-left: 2px;
-}#fixedBtnBox
-{
-    position: absolute;
-    top:900px;
-    right: 20px;
+.siteSpan {
+  font-size: 16px;
+  color: white;
+  text-shadow: 1px 1px 3px black;
+  display: inline-block;
+  max-width: 100px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-top: 0px;
+}
+.uSiteDelete {
+  /* display: none; */
+  position: absolute;
+  margin-left: 30px;
+  font-size: 15px;
+  width: 20px;
+  height: 20px;
+  padding-top: 2px;
+  padding-left: 2px;
+}
+#fixedBtnBox {
+  position: absolute;
+  top: 900px;
+  right: 20px;
 }
